--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
     // Firebase設定
     const firebaseConfig = {
-      apiKey: "AIzaSyDWFs3G2ZbLQ_hYvzD6sAnqWWMbROSFnEs",
+      apiKey: "",
       authDomain: "journal-app-ea1e8.firebaseapp.com",
       projectId: "journal-app-ea1e8",
       storageBucket: "journal-app-ea1e8.appspot.com",
