--- a/index.html
+++ b/index.html
@@ -34,6 +34,22 @@
     #logout-btn { background-color: #777; color: white; float: right; width: 100px; }
     #submit-btn { background-color: #1976d2; color: white; width: 100%; }
     #calendar { margin-bottom: 30px; display: grid; grid-template-columns: repeat(7, 1fr); gap: 8px; user-select: none; }
+    #current-month {
+      grid-column: 1 / -1; 
+      font-size: 20px; 
+      font-weight: 700; 
+      color: #1976d2;
+      margin-bottom: 10px;
+      margin:0 40px;
+      text-align: center;
+    } 
+
+    #prev-month, #next-month {
+      background-color: #e3f2fd; color: #1976d2; border: none; padding: 10px 20px;
+      border-radius: 6px; cursor: pointer; font-size: 16px; margin: 0 10px;
+    }
+
+    #prev-month:hover, #next-month:hover { background-color: #bbdefb; }
     #calendar span { font-weight: 700; text-align: center; color: #1976d2; padding-bottom: 6px; border-bottom: 2px solid #1976d2; }
     #calendar button {
       width: 100%; padding: 10px 0; border-radius: 50%; border: 1.8px solid transparent;
@@ -72,6 +88,11 @@
   </div>
 
   <div id="diary-div" style="display:none;">
+    <div id="calendar-controls" style="text-align:center; margin-bottom:10px;">
+      <button id="prev-month">←前月</button>
+      <span id="current-month"></span>
+      <button id="next-month">次月→</button>
+    </div>
     <div id="calendar"></div>
     <h2 id="selected-date-title">日付を選択してください</h2>
     <textarea id="gratitude-text" placeholder="今日の感謝を書く" rows="3"></textarea>
@@ -120,10 +141,14 @@
     const calendarDiv = document.getElementById("calendar");
     const selectedDateTitle = document.getElementById("selected-date-title");
     const streakDiv = document.getElementById("streak");
+    const prevMonthBtn = document.getElementById("prev-month");
+    const nextMonthBtn = document.getElementById("next-month");
+    const currentMonthLabel = document.getElementById("current-month");
 
     let editingDocId = null;
     let selectedDate = null;
     let allPostDates = [];
+    let currentYear, currentMonth;
 
     const provider = new GoogleAuthProvider();
 
@@ -132,6 +157,9 @@
         loginDiv.style.display = "none";
         diaryDiv.style.display = "block";
         await fetchPostDates();
+        const now = new Date();
+        currentYear = now.getFullYear();
+        currentMonth = now.getMonth();
         buildCalendar();
         calculateStreak();
       } else {
@@ -145,19 +173,19 @@
     googleLoginBtn.onclick = () => signInWithPopup(auth, provider).catch(e => alert(e.message));
     logoutBtn.onclick = () => signOut(auth);
 
+    prevMonthBtn.onclick = () => { currentMonth--; if (currentMonth < 0) { currentMonth = 11; currentYear--; } buildCalendar(); };
+    nextMonthBtn.onclick = () => { currentMonth++; if (currentMonth > 11) { currentMonth = 0; currentYear++; } buildCalendar(); };
+
     async function fetchPostDates() {
       allPostDates = [];
       const q = query(collection(db, "posts"), where("uid", "==", auth.currentUser.uid));
       const snapshot = await getDocs(q);
       snapshot.forEach(docSnap => {
         const data = docSnap.data();
-        if (data.date && data.date.toDate) {
-          allPostDates.push(data.date.toDate().toISOString().slice(0,10));
-        } else if (typeof data.date === "string") {
+        if (typeof data.date === "string") {
           allPostDates.push(data.date);
         }
       });
-      console.log("allPostDates:", allPostDates);
     }
 
     function buildCalendar() {
@@ -169,11 +197,10 @@
         calendarDiv.appendChild(span);
       });
 
-      const now = new Date();
-      const year = now.getFullYear();
-      const month = now.getMonth();
-      const firstDay = new Date(year, month, 1).getDay();
-      const daysInMonth = new Date(year, month+1, 0).getDate();
+      currentMonthLabel.textContent = `${currentYear}年${currentMonth+1}月`;
+
+      const firstDay = new Date(currentYear, currentMonth, 1).getDay();
+      const daysInMonth = new Date(currentYear, currentMonth+1, 0).getDate();
 
       for (let i=0; i<firstDay; i++) {
         const btn = document.createElement("button");
@@ -183,7 +210,7 @@
 
       for (let d=1; d<=daysInMonth; d++) {
         const btn = document.createElement("button");
-        const dateStr = `${year}-${String(month+1).padStart(2,'0')}-${String(d).padStart(2,'0')}`;
+        const dateStr = `${currentYear}-${String(currentMonth+1).padStart(2,'0')}-${String(d).padStart(2,'0')}`;
         btn.textContent = d;
         btn.dataset.date = dateStr;
         if (allPostDates.includes(dateStr)) btn.classList.add("has-post");
